# bulletin_board

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
fixtures/: ad.json  comments.json  users.json
notice/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
notice/migrations/: 0001_initial.py  0002_initial.py  0003_delete_mymodel_alter_ad_options_and_more.py
notice/tests/: test_notice.py
users/: managers.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py  0003_alter_user_options_alter_user_managers_user_is_staff_and_more.py
users/tests/: test_user.py
