[tool.poetry]
name = "bulletin-board"
version = "0.1.0"
description = ""
authors = ["Azat Solonisky <asolo4150@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
psycopg2-binary = "^2.9.9"
black = "^24.8.0"
djangorestframework = "^3.15.2"
pillow = "^10.4.0"
djangorestframework-simplejwt = "^5.3.1"
django-filter = "^24.3"
ipython = "^8.26.0"
redis = "^5.0.8"
coverage = "^7.6.1"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.4.0"
django = "5.0.7"
django-celery-beat = "^2.6.0"
setuptools = "^72.2.0"
eventlet = "^0.36.1"
djoser = "^2.2.3"
drf-nested-routers = "^0.94.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
